seed data ingredientUnits and recipeCategories done

--- a/src/Cooking.Migrations/Cooking.Migrations.csproj
+++ b/src/Cooking.Migrations/Cooking.Migrations.csproj
@@ -22,6 +22,12 @@
     <EmbeddedResource Include="Scripts\IranGeoData.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\InitialIngredientUnits.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\InitialRecipeCategories.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
