some project configs, api versioning, add ingredient completed #4

--- a/src/Cooking.RestApi/Cooking.RestApi.csproj
+++ b/src/Cooking.RestApi/Cooking.RestApi.csproj
@@ -8,6 +8,10 @@
     <DebugSymbols>False</DebugSymbols>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Images\**" />
     <Content Remove="Images\**" />
