--- a/src/Cooking.Entities/Cooking.Entities.csproj
+++ b/src/Cooking.Entities/Cooking.Entities.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>False</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
 
   </ItemGroup>
 
