--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -2,6 +2,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Migration",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Cooking.Migrations/bin/Debug/net5.0/Cooking.Migrations.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "internalConsole"
+        },
+        {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
@@ -26,5 +37,6 @@
                 "/Views": "${workspaceFolder}/Views"
             }
         }
+
     ]
 }
