--- a/src/Cooking.RestApi/appsettings.json
+++ b/src/Cooking.RestApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Environment": "Development",
   "Url": "http://localhost:5006",
-  //"DbConnectionString": "Data Source=192.168.1.222;Initial Catalog=Cooking;User ID=tav;Password=S!mpl3",
+  //"DbConnectionString": "Data Source=185.55.224.82;Initial Catalog=kachiche_cooking;User ID=kachiche_cooking;Password=Avangard@1400",
   "DbConnectionString": "server=.;database=Cooking;Trusted_Connection=True",
   "Logging": {
     "Level": "Debug",
